@@ -90,6 +90,8 @@ Data Changes:
 - Fixed Spirit Hunter rank 2 and 3 not correctly requiring Astral Combat 6/8 for Adepts. Closes #5093
 - Fixed Wildcard Chimera, It Works If You Work It and Metaviral Attunement qualities not properly requiring Infected qualities. Closes #5104
 - Changed 'unknown' Spell category to 'other' on sheets. Closes #5096
+- Removed power and quality requirements from Psychometry art. Any awakened should now have access to this metamagic provided they have the Art or the relevant optional rule enabled to ignore arts.
+- Fixed the underbarrel grenade launcher not properly using requirements to be available onlty to rifle-sized weapons.
 
 Changed/New Strings:
 - LimitCondition_SkillsActiveLeadership
